gke-cross-cluster-connectivity/multiple-cluster/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app2-gateway    # we will allow internet users to access app2, app2 will then invoke app1's API
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app2
spec:
  hosts:
  - "*"
  gateways:
  - app2-gateway
  http:
  - match:
    - uri:
        exact: /app2
    # - uri:
    #     prefix: /static
    # - uri:
    #     exact: /login
    # - uri:
    #     exact: /logout
    # - uri:
    #     prefix: /api/v1/products
    route:
    - destination:
        host: app2
        port:
          number: 9999
